chore: fixes overflow

--- a/resources/scss/employee/admin/dashboard.scss
+++ b/resources/scss/employee/admin/dashboard.scss
@@ -1,12 +1,11 @@
-@import '../../utils';
-@import '../../scrollbar';
-@import '../../scales/icon-size';
-@import '../../icon/lucide';
-@import '../side-top-bar';
-@import '../../palette/text-colors';
-@import '../../palette/start-borders';
-@import '../../footer';
-
+@import "../../utils";
+@import "../../scrollbar";
+@import "../../scales/icon-size";
+@import "../../icon/lucide";
+@import "../side-top-bar";
+@import "../../palette/text-colors";
+@import "../../palette/start-borders";
+@import "../../footer";
 
 .col-md-7 p {
     margin-bottom: 0 !important;
@@ -15,7 +14,6 @@
 /* ==========================================================================
    Section 2: Laravel Pulse & Activity Logs
    ========================================================================== */
-
 
 /* Laravel Pulse
 ========================================================================== */
@@ -69,11 +67,9 @@
     color: var(--main-white);
 }
 
-
 /* ==========================================================================
    Section 3: Announcement & DTR
    ========================================================================== */
-
 
 /* Create Announcement Button 
 ========================================================================== */
@@ -101,8 +97,8 @@
 
 .icon-with-border {
     color: gray;
-    width: 16px; 
-    height: 16px; 
+    width: 16px;
+    height: 16px;
     transition: all 0.3s ease;
 }
 
@@ -115,11 +111,19 @@
     color: white;
 }
 
-.table {
---bs-table-striped-bg: #fff !important;
-}
+.dtr-table {
+    .table {
+        --bs-table-striped-bg: #fff !important;
+        border-collapse: collapse;
+    }
 
-table.table {
-    border-collapse: collapse !important;
-    border-spacing: 0 calc(1rem + .5vw) !important;
+    table.table {
+        border-spacing: 0 calc(1rem + 0.5vw) !important;
+        width: 100%;
+    }
+
+    table tbody tr {
+        margin-bottom: 1rem; /* Adjust this value to your desired spacing */
+        border-bottom: 1px solid #dee2e6 !important; /* Add a bottom border */
+    }
 }
